[package]
name = "evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
rets_expression = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# This is important when building a wasm module
[lib]
crate-type = ["cdylib"]
